testdata/language-features/guard/guard12.reject.out
type error: can not unify
[32m'Char[m
with
[32m'Tuple0[m

in "testdata/language-features/guard/guard12.reject.lc" (line 1, column 13):
fun x | x = () | otherwise = 'a'
            ^^
